--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -2,12 +2,12 @@
     padding: 20px;
     display: flex;
     align-items: center;
-    max-width: 600px;
+    max-width: 1000px;
     margin: 0 auto;
     border-bottom: 1px solid #f2f2f2;
   }
   .navbar h1 {
-    color: #f1356d;
+    color: #FF6529;
   }
   .navbar .links {
     margin-left: auto;
@@ -18,5 +18,5 @@
     padding: 6px;
   }
   .navbar a:hover {
-    color: #f1356d;
+    color: #FF6529;
   }
