--- a/frontend/src/components/Navbar.module.css
+++ b/frontend/src/components/Navbar.module.css
@@ -1,14 +1,11 @@
 .navbar {
-  padding: 20px;
   display: flex;
   align-items: center;
-  width: 100%;
   margin: 0 auto;
-  position:fixed;
-  z-index: 999;
+  padding: 10px 200px;
   border-bottom: 1px solid #f2f2f2;
 }
-.navbar h1 {
+.title {
   color: #ff6529;
 }
 .navbar .links {
@@ -20,35 +17,34 @@
   padding: 6px;
 }
 .navbar a:hover {
-  color: #ff6529;
+  color:  #ff6529;;
 }
-
-.bars {
-  display: none;
-}
-
-.link-image {
-  margin-left: auto;
-  order: 2;
+.inpt {
+  border: 0px;
+  margin: 10px 20px 10px 10px;
+  background-color: #f7f9fa;
+  display: inline-block;
+  outline: none;
+  flex-grow: 1;
 }
 
 .search-bar {
   border-radius: 9999px;
   background-color: #f7f9fa;
   flex-grow: 1;
-  display: inline-block;
   /* padding: 20px 0 20px 0; */
   border: 1px solid #1c1d1f;
   display: flex;
-  margin: 10px auto;
+  margin-left: 10px;
 }
 
 .search-icon {
-  padding-right: 15px;
-  margin: 17px 0 0 15px;
+  margin: 12px 0 0 15px;
 }
 
 .search-button {
+  border: none;
+  border-radius: 10px;
   height: 25px;
   margin: auto 10px;
 }
