--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,31 +4,7 @@
 * {
   margin: 0;
   font-family: "Quicksand";
+  scroll-behavior: smooth;
+  box-sizing: border-box ;
   color: #333;
-}
-.navbar {
-  padding: 20px;
-  display: flex;
-  align-items: center;
-  margin: 0 auto;
-  border-bottom: 1px solid #f2f2f2;
-}
-.navbar h1 {
-  color: #f1356d;
-}
-.navbar .links {
-  margin-left: auto;
-}
-.navbar a {
-  margin-left: 16px;
-  text-decoration: none;
-  padding: 6px;
-}
-.navbar a:hover {
-  color: #f1356d;
-}
-.content {
-  max-width: 600px;
-  margin: 40px auto;
-  padding: 20px;
 }
