--- a/frontend/src/components/Navbar.module.css
+++ b/frontend/src/components/Navbar.module.css
@@ -43,8 +43,9 @@
 }
 
 .search-button {
-  border: none;
+  border: 2px solid black;
   border-radius: 10px;
+  padding: 0px 5px;
   height: 25px;
   margin: auto 10px;
 }
