moving the Guest to the homepage

--- a/frontend/src/pages/Admin/Admin.css
+++ b/frontend/src/pages/Admin/Admin.css
@@ -1,3 +1,10 @@
 .adminContainer{
-    display: flex;
+    display: grid;
+}
+.btn{
+    margin: 0 10px;
+    height: 60px;
+    border-width: 0;
+    border-radius:5px
+
 }
