--- a/frontend/src/pages/Admin/AddInstructor.css
+++ b/frontend/src/pages/Admin/AddInstructor.css
@@ -1,13 +1,52 @@
-input[type="text"],
-[type="password"],
-select {
+.inputClass{
   width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
+  padding: 5px;
+  border: none;
+  border-bottom: 1px solid gray;
+}
+.labelClass {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.top,
+.bottom {
+  -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
+  box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+  padding: 10px;
+  margin: 20px;
+  display: flex;
+}
+
+.imgClass {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+.right {
+  flex: 2;
+}
+.formInput {
+  width: 40%;
+}
+.h1Class{
+  color: rgb(186, 179, 179);
+  font-size: 20px;
+}
+.formClass {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  justify-content: space-around;
+}
+.new {
+  width: 100%;
+  display: flex;
+}
+.newContainer {
+  flex: 6;
 }
 .required {
   color: red;
@@ -18,23 +57,23 @@ select {
   padding: 20px;
   border-bottom: 1px solid #f2f2f2;
 }
-input[type="submit"] {
-  width: 100%;
-  background-color: #ff6529;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
+
+.buttonClass {
+  width: 150px;
+  padding: 10px;
   border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-input[type="submit"]:hover {
-  background-color: #ff6529;
-}
-
-.contains {
-  border-radius: 7px;
-  padding: 20px;
+  background-color: teal;
+  color: white;
   font-weight: bold;
+  cursor: pointer;
+  margin-top: 10px;
+}
+.selectClass {
+  width: 30%;
+  padding: 12px 20px;
+  margin-right: 50px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
 }
