--- a/frontend/src/pages/Admin/Admin.css
+++ b/frontend/src/pages/Admin/Admin.css
@@ -1,10 +1,7 @@
-.adminContainer{
-    display: grid;
-}
-.btn{
-    margin: 0 10px;
-    height: 60px;
-    border-width: 0;
-    border-radius:5px
+.admin{
+    display: flex;
+} 
+ .adminContainer {
+    flex: 6;}
 
-}
+
