--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -1,28 +1,24 @@
 .home {
-    max-width: 600px;
-    margin: 40px auto;
-    padding: 20px;
-    display: grid;
-  }
-  .mainImage{
-      margin-left:70% ;
-      margin-top: 10%;
-      width: 60%;
-      height: auto;
-   
-  }
-  button{
-    background-color: #ff6529;
-    color: white;
-    }
-    .guestContainer{
-        margin-left: 40%;
-        margin-top: 30vh;
-    }
-    .guestButtons{
-        margin: 0 10px;
-        height: 60px;
-        border-width: 0;
-        border-radius: 10%;
-    
-    }
+  max-width: 600px;
+  margin: 40px auto;
+  padding: 20px;
+  display: inline-block;
+}
+.mainImage {
+  margin-left: 200%;
+  margin-top: 10%;
+  width: 60%;
+  height: auto;
+}
+
+.guestContainer {
+  margin-bottom: 50%;
+}
+.guestButtons {
+  background-color: #ff6529;
+  color: white;
+  margin: 0 10px;
+  height: 60px;
+  border-width: 0;
+  border-radius: 10%;
+}
