Styling for Course View

--- a/frontend/src/pages/Course/Course.module.css
+++ b/frontend/src/pages/Course/Course.module.css
@@ -1,19 +1,42 @@
 .course {
   display: grid;
+  background-color: bisque;
 }
 .mainTop {
-  margin: 15px;
-  height: 200px;
-  display: grid;
+  
+    margin: 100px;
+    height: 0px;
+    display: grid;
+    color: red;
+    background-color: orange;
+    font-size: 50px;
+    justify-content: space-around;
 }
 
 .mainbottom {
-  margin: 15px;
+  margin: 50px;
 }
 .h1main {
-  size: 100px;
+  margin: 50px;
 }
+.item{
+  border-color: #000;
+  border-style: double;
+  margin: 10px;
+  color: #000;
+  font-size: 25px;
+  margin-left: 10px;
+  background-color: aqua;
+}
+.title{
+  text-decoration :underline; 
 
+}
 .star {
   color: goldenrod;
+}
+
+.span{
+  margin: 15px;
+  font-size: 25px;
 }
