--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -4,21 +4,53 @@
   padding: 20px;
   display: inline-block;
 }
-.mainImage {
+/*.mainImage {
   margin-left: 200%;
   margin-top: 10%;
   width: 60%;
   height: auto;
-}
+}*/
 
 .guestContainer {
+  margin-top: 50%;
   margin-bottom: 50%;
+
 }
 .guestButtons {
-  background-color: #ff6529;
+  /*background-color: #ff6529;
   color: white;
   margin: 0 10px;
   height: 60px;
   border-width: 0;
+  border-radius: 10%;*/
+  background-color: #ddd;
+  height: 60px;
+  border: none;
+  color: black;
+  padding: 16px 32px;
+  text-align: center;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition: 0.3s;
+  border-width: 0;
   border-radius: 10%;
 }
+.guestButtons:hover {
+  background-color: #ff6529;
+  color: white;
+}
+.firstLine img {
+  float: left;
+  width: 100px;
+  height: 100px;
+}
+
+.firstLine h1 {
+  position: relative;
+  top: 18px;
+  left: 10px;
+}
+.firstLine{
+  margin-bottom: 10px;
+}
+
