--- a/frontend/src/components/CourseCard.css
+++ b/frontend/src/components/CourseCard.css
@@ -1,14 +1,16 @@
-.card{
-   background-color: #fff;
-    width: 80%;
-    box-shadow: 0 5px 25px rgba(1 1 1 /15%);
-    border-radius: 10px;
-    padding: 25px;
-    margin-left: 150px;
-    margin-bottom: 10px;
-    transition: 0.7s ease;
+.card {
+  margin-top: 20px;
+  max-height: 200px;
+  background-color: #fff;
+  width: 80%;
+  box-shadow: 0 5px 25px rgba(1 1 1 /15%);
+  border-radius: 10px;
+  padding: 25px;
+  margin-left: 150px;
+  margin-bottom: 10px;
+  transition: 0.7s ease;
 }
-.card:hover{
+.card:hover {
   transform: scale(1.05);
 }
 .card h4 {
