--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -23,7 +23,7 @@
   border-radius: 10%;
 }
 .guestButtons:hover {
-  background-color: #ff6529;
+  background-color: rgb(0, 65, 158);;
   color: white;
 }
 .firstLine img {
