--- a/frontend/src/components/Navbar.module.css
+++ b/frontend/src/components/Navbar.module.css
@@ -2,20 +2,22 @@
   display: flex;
   align-items: center;
   margin: 0 auto;
-  padding: 10px 200px;
+  padding: 10px 100px;
   border-bottom: 1px solid #f2f2f2;
+  box-shadow: rgb(0 0 0 / 16%) 0px 0px 6px;
 }
 .headerTitle {
-  color: rgb(0, 65, 158);
-  font-weight: bold ;
-  font-size: x-large;
+  color: #373a3c;
+  max-height: 50px;
+  margin-right: 30px;
+  width: 150px;
 }
 .navbar.links {
   margin-left: auto;
 }
 .navbar a {
   color: black;
-  margin-left: 16px;
+  margin-left: 17px;
   text-decoration: none;
   padding: 6px;
 }
@@ -42,7 +44,8 @@
 }
 
 .search-icon {
-  margin: 12px 0 0 15px;
+  margin: 15px 0 0 15px;
+  cursor: pointer;
 }
 
 .search-button {
