--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -1,13 +1,33 @@
 .home {
-  max-width: 600px;
-  margin: 40px auto;
-  padding: 20px;
+  width: 100%;
   display: inline-block;
 }
-.guestContainer {
-  margin-top: 50%;
-  margin-bottom: 50%;
-
+.navbarSub {
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+  padding: 10px 200px;
+  border-bottom: 1px solid #f2f2f2;
+}
+section{
+  padding: 100px 200px;
+}
+.main{
+  width: 100%;
+  min-height: 20vh;
+  display: flex;
+  align-items: center;
+  background-color:#373a3c;
+  background-position:center ;
+}
+.mainImage{
+  width: 200px;
+  margin-left: 50%;
+}
+.main h2{
+  color: #fff;
+  font-size: 1.5em;
+  font-weight: 500;
 }
 .guestButtons {
   background-color: #ddd;
@@ -17,27 +37,10 @@
   padding: 16px 32px;
   text-align: center;
   font-size: 16px;
-  margin: 4px 2px;
   transition: 0.3s;
-  border-width: 0;
-  border-radius: 10%;
+  border-radius: 20px
 }
 .guestButtons:hover {
   background-color: rgb(0, 65, 158);;
   color: white;
 }
-.firstLine img {
-  float: left;
-  width: 100px;
-  height: 100px;
-}
-
-.firstLine h1 {
-  position: relative;
-  top: 18px;
-  left: 10px;
-}
-.firstLine{
-  margin-bottom: 10px;
-}
-
