add promotion form

--- a/frontend/src/pages/Course/Course.module.css
+++ b/frontend/src/pages/Course/Course.module.css
@@ -1,4 +1,4 @@
-.course {
+/* .course {
   display: grid;
   background-color: bisque;
 }
@@ -39,4 +39,4 @@
 .span{
   margin: 15px;
   font-size: 25px;
-}
+} */
