--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -41,6 +41,23 @@ section{
   border-radius: 20px
 }
 .guestButtons:hover {
-  background-color: rgb(0, 65, 158);;
+  background-color: rgb(0, 65, 158);
   color: white;
+}
+
+.Inprogress{
+  background-color: white;
+  color: black;
+  margin-left: 5rem;
+  border: none;
+  border-bottom: 5px solid rgb(0, 65, 158) ;
+}
+.notPressed{
+  background-color: white;
+  color: black;
+  margin-left: 5rem;
+  border: none;
+}
+.notPressed:hover {
+  border-bottom: 5px solid rgb(0, 65, 158) ;
 }
