--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -9,40 +9,25 @@
   padding: 10px 200px;
   border-bottom: 1px solid #f2f2f2;
 }
-section{
+.mainSection{
   padding: 100px 200px;
-}
-.main{
   width: 100%;
   min-height: 20vh;
+  margin-top: 10px;
   display: flex;
   align-items: center;
-  background-color:#373a3c;
+  background-color:#1c1d1f;
   background-position:center ;
 }
 .mainImage{
   width: 200px;
   margin-left: 50%;
 }
-.main h2{
+.mainSection h2{
   color: #fff;
-  font-size: 1.5em;
+  font-size: 2.5em;
   font-weight: 500;
-}
-.guestButtons {
-  background-color: #ddd;
-  height: 60px;
-  border: none;
-  color: black;
-  padding: 16px 32px;
-  text-align: center;
-  font-size: 16px;
-  transition: 0.3s;
-  border-radius: 20px
-}
-.guestButtons:hover {
-  background-color: rgb(0, 65, 158);
-  color: white;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .Inprogress{
@@ -60,4 +45,12 @@ section{
 }
 .notPressed:hover {
   border-bottom: 5px solid rgb(0, 65, 158) ;
+}
+.middle{
+  width: 100%;
+  background-color: rgba(241, 250, 252, 0.379);
+  min-height: 20vh;
+  align-items: center;
+  margin-left: 4rem;
+  background-position:center ;
 }
