update courses pages

--- a/frontend/src/components/Filter.module.css
+++ b/frontend/src/components/Filter.module.css
@@ -1,4 +1,4 @@
-.filter{
+.filter {
   flex: 1;
   border-right: 0.5px solid rgb(230, 227, 227);
   min-height: 100vh;
@@ -12,20 +12,20 @@
 .logo {
   font-size: 20px;
   font-weight: bold;
+  font-family: "Open Sans", sans-serif;
   margin-right: 8px;
-  color: #ff6529;
+  color: #000000;
 }
 .filter-button {
-    display: flex;
-    flex-wrap: wrap;
-    row-gap: 0.8rem;
-    margin: 0 -0.4rem;
-  }
-  
-  .panel{
-    border-top: 1px solid #d1d7dc;
-  }
-  .rating{
-    display: grid;
-  }
-  
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 0.8rem;
+  margin: 0 -0.4rem;
+}
+
+.panel {
+  border-top: 1px solid #d1d7dc;
+}
+.rating {
+  display: grid;
+}
