--- a/frontend/src/components/RegCourseCard.module.css
+++ b/frontend/src/components/RegCourseCard.module.css
@@ -3,11 +3,19 @@
     border-radius: 0.25rem;
     padding: 0rem;
     max-width: 250px;
+    border: none;
     
+}
+.regcard button{
+    background-color:rgba(241, 250, 252, 0.379);
+    padding: 0;
+    width: 100%;
+    margin: 0;
+    border: none;
 }
 .cardgrid {
     display: grid;
-    grid-template-columns: 250px 250px 250px 250px;
+    grid-template-columns: repeat( auto-fit, minmax(250px, 1fr));
     grid-gap: 40px 40px;
     align-items: flex-start;
   }
@@ -53,7 +61,8 @@
     font-weight: bold;
 }
 .rating{
-    margin-left: 5rem;
+  width: 100%;
+  margin-left: 4rem;
 }
 .edit{
     padding: 0;
@@ -62,6 +71,5 @@
     background-color: rgba(241, 250, 252, 0.379);
     color: black;
     font-size: 0.6rem;
-    margin-left: 12.5rem;
-    font-weight: bold;
+    font-weight: 600;
 }
