--- a/frontend/src/pages/Course/Courses.module.css
+++ b/frontend/src/pages/Course/Courses.module.css
@@ -1,40 +1,62 @@
 .wrapper{
   display: flex;
+  background-color: rgba(241, 250, 252, 0.379);
 }
 .course-list {
   display: grid;
-  grid-template-columns: 250px 250px 250px 250px ; 
+  grid-template-columns: repeat( auto-fit, minmax(250px, 250px)); ; 
   grid-gap: 40px 40px;
-  margin-left: 5rem;
+  margin-left: 3rem;
+  margin-right: 1rem;
 
 }
-.course-main{
+.wrapper-left{
+  flex: 1;
+}
+.wrapper-right{
+  flex: 8;
   width: 100%;
   min-height: 150vh;
 
 }
-.course-main h1{
+.wrapper-right h1{
   font-size: 2.5rem;
   font-weight: bolder;
   font-family: 'Open Sans', sans-serif;
   padding: auto;
   margin-top: 3rem;
-  margin-left: 5rem;
+  margin-left: 3rem;
 }
-.course-main h2{
+.wrapper-right h2{
   font-size: 1.3rem;
   color: rgb(97, 96, 96);
   font-weight:800;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   padding: auto;
   margin-top: 1rem;
-  margin-left: 5rem;
-  margin-bottom: 2rem;
+  margin-left: 3rem;
+ 
 }
-.course-main hr{
+.wrapper-right hr{
   height: 3px;
   background-color: #000;
   width: 80%;
-  margin-left: 5rem;
+  margin-left: 3rem;
   margin-top: 2rem;
+}
+.end{
+  display: flex;
+}
+.rating{
+  padding: 0;
+}
+.edit{
+  border-radius: 0.25rem;
+  margin-bottom: 5rem;
+  font-size: 0.9rem;
+  font-weight: 700;
+  font-family: "Open Sans", sans-serif;
+  padding: 0.5rem;
+  background-color: white ;
+  border: 0.5px solid rgb(111, 109, 109); 
 }
