--- a/frontend/src/components/RegCourseCard.module.css
+++ b/frontend/src/components/RegCourseCard.module.css
@@ -15,7 +15,7 @@
 }
 .cardgrid {
     display: grid;
-    grid-template-columns: repeat( auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat( auto-fit, minmax(250px, 250px));
     grid-gap: 40px 40px;
     align-items: flex-start;
   }
