--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -12,6 +12,7 @@
 .mainSection{
   padding: 100px 200px;
   width: 100%;
+  min-height: 45vh;
   margin-top: 10px;
   display: flex;
   align-items: center;
@@ -34,7 +35,7 @@
   color: black;
   margin-left: 5rem;
   border: none;
-  border-bottom: 5px solid rgb(0, 65, 158) ;
+  border-bottom: 5px solid  rgba(192,4,24,255); ;
 }
 .notPressed{
   background-color: white;
@@ -43,7 +44,7 @@
   border: none;
 }
 .notPressed:hover {
-  border-bottom: 5px solid rgb(0, 65, 158) ;
+  border-bottom: 5px solid rgba(192,4,24,255); ;
 }
 .middle{
   background-color: rgba(241, 250, 252, 0.379);
