--- a/frontend/src/components/CourseContent.module.css
+++ b/frontend/src/components/CourseContent.module.css
@@ -13,3 +13,11 @@
 .icon{
     font-size: small;
 }
+.accordation-body{
+    display: grid;
+    gap: 0.5rem;
+    align-items: center;
+}
+.accordation-body button {
+    width: 20%;
+}
