--- a/frontend/src/pages/Instructor/SetExam.module.css
+++ b/frontend/src/pages/Instructor/SetExam.module.css
@@ -1,12 +1,9 @@
 .course {
-    width: 100%;
+    max-width: 80%;
     display: inline-block;
     min-height: 200vh;
-    padding-left: 1%;
-    padding-right:50%;
-    
   }
-h1{
+.h1{
   text-align:center;
   font:Bold;
 }
