--- a/frontend/src/components/CourseContent.module.css
+++ b/frontend/src/components/CourseContent.module.css
@@ -18,6 +18,8 @@
     gap: 0.5rem;
     align-items: center;
 }
-.accordation-body button {
-    width: 20%;
+.subtitleView{
+    background-color: white;
+    color: blue;
+    border: none;
 }
