--- a/frontend/src/components/CoursePreview.module.css
+++ b/frontend/src/components/CoursePreview.module.css
@@ -3,6 +3,9 @@
     font-size: 1.5rem;
     margin-top: 2rem;
 }
+.mainRight{
+    min-height: 250vh;
+}
 .mainRight-hr{
     height: 3px;
     background-color: #000;
@@ -44,12 +47,17 @@
     justify-content: center;
 }
 .mainRight-rating{
-    display: flex;
+    display: grid;
     align-items: center;
 }
-.mainRight-rating label{
-    margin-left: 0.5rem;
-    margin-bottom: 1.7rem;
-    font-weight: bold;
+.mainRight-rating h3{
+    font-size: 1.3rem;
+    align-items: center;
+    font-family: bolder;
     font-family: 'Open Sans', sans-serif;
+}
+.rating-box{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    margin-bottom: 2rem;
 }
