--- a/frontend/src/components/RegCourseCard.module.css
+++ b/frontend/src/components/RegCourseCard.module.css
@@ -1,5 +1,4 @@
 .regcard{
-    background-color: rgba(241, 250, 252, 0.379);
     border-radius: 0.25rem;
     padding: 0rem;
     max-width: 250px;
@@ -7,7 +6,7 @@
     
 }
 .regcard button{
-    background-color:rgba(241, 250, 252, 0.379);
+    background-color:inherit;
     padding: 0;
     width: 100%;
     margin: 0;
@@ -68,7 +67,7 @@
     padding: 0;
     margin: 0;
     border: none;
-    background-color: rgba(241, 250, 252, 0.379);
+    background-color:inherit;
     color: black;
     font-size: 0.6rem;
     font-weight: 600;
