--- a/frontend/src/pages/Admin/Admin.module.css
+++ b/frontend/src/pages/Admin/Admin.module.css
@@ -1,7 +1,11 @@
 .admin{
     display: flex;
-} 
- .adminContainer {
-    flex: 6;}
+    font-family: 'tahoma';
 
+} 
+.admin-content{
+    display: grid;
+    grid-template-rows: 5rem;
+    flex: 6
+}
 
