--- a/frontend/src/components/Navbar.module.css
+++ b/frontend/src/components/Navbar.module.css
@@ -3,6 +3,7 @@
   align-items: center;
   margin: 0 auto;
   max-height: 70px;
+  width: 100%;
   padding: 10px 3rem;
   border-bottom: 1px solid #f2f2f2;
   box-shadow: rgb(0 0 0 / 16%) 0px 0px 6px;
@@ -49,7 +50,6 @@
 }
 .dropUser{
   position: relative;
-  margin-right: 1rem;
   padding: 0.3rem;
   cursor: pointer;
 }
