--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -35,7 +35,7 @@
   color: black;
   margin-left: 5rem;
   border: none;
-  border-bottom: 5px solid  rgba(192,4,24,255); ;
+  border-bottom: 5px solid  rgba(192,4,24,255);
 }
 .notPressed{
   background-color: white;
