Update color to style={{color:'#a00407'}}

--- a/frontend/src/pages/Course/RegCourse.module.css
+++ b/frontend/src/pages/Course/RegCourse.module.css
@@ -52,7 +52,7 @@
     padding: 16px 10px 10px 10px;
 }
 .leftsection-bottom li:hover{
-    background-color: rgba(208, 236, 242, 0.379);
+    background-color: #efdada; 
 
 }
 .leftsection-liclicked{
