--- a/frontend/src/pages/Course/Course.module.css
+++ b/frontend/src/pages/Course/Course.module.css
@@ -54,11 +54,10 @@
 .mainSection-right{
   width: 60%;
   padding: 0;
+  margin-top: 0.5rem;
   display: grid;
   min-height: 40vh;;
   background-color: rgb(255, 255, 255);
-  box-shadow: rgb(0 0 0 / 16%) 0px 0px 6px;
-
 }
 .preview{
   color: white;
@@ -86,8 +85,14 @@
   font-weight: bold;
   font-family: "Open Sans", sans-serif;
   padding: 0.4rem;
-  background-color: white ;
+  background-color: #a00407;
+  border-radius: 0;
+  color: white;
   border: 0.5px solid rgb(111, 109, 109);
+}
+.buyme:hover{
+  background-color: #680406;
+  color: white;
 }
 .price{
   color: white;
