Update color to style={{color:'#a00407'}}

--- a/frontend/src/pages/Course/RegCourse.module.css
+++ b/frontend/src/pages/Course/RegCourse.module.css
@@ -1,6 +1,7 @@
 .mainreg {
   display: grid;
   grid-template-columns: 20%  80%;
+  min-height: 100vh;
 }
 .leftsection {
   flex: 2;
@@ -46,7 +47,6 @@
     justify-content: center;
 }
 .leftsection-bottom li{
-    border-radius: 0.25rem;
     min-width: 15rem;
     min-height: 4rem;
     padding: 16px 10px 10px 10px;
@@ -56,9 +56,8 @@
 
 }
 .leftsection-liclicked{
-    border-radius: 0.25rem;
     min-width: 15rem;
     min-height: 4rem;
     padding: 10px 10px 10px 10px;
-    border: 2px solid black ;
+    border-left: 2px solid #a00407; ;
 }
