--- a/frontend/src/components/CourseContent.module.css
+++ b/frontend/src/components/CourseContent.module.css
@@ -13,10 +13,10 @@
 .icon{
     font-size: small;
 }
-.accordation-body{
-    display: grid;
-    gap: 0.5rem;
-    align-items: center;
+.accordion-button:not(.collapsed) {
+    color: #ffffff;
+    background-color: #29008a;
+    box-shadow: inset 0 -1px 0 rgb(0 0 0 / 13%);
 }
 .subtitleView{
     background-color: white;
