--- a/frontend/src/components/Navbar.module.css
+++ b/frontend/src/components/Navbar.module.css
@@ -4,15 +4,12 @@
   margin: 0 auto;
   max-height: 70px;
   width: 100%;
-  padding: 10px 3rem;
+  padding: 10px 2rem;
   border-bottom: 1px solid #f2f2f2;
-  box-shadow: rgb(0 0 0 / 16%) 0px 0px 6px;
+  box-shadow: rgb(0 0 0 / 20%) 0px 0px 10px;
 }
-.headerTitle {
-  color: #373a3c;
-  max-height: 50px;
-  margin-right: 30px;
-  width: 150px;
+.linkContainer{
+  margin-left: auto;
 }
 
 .links{
@@ -40,7 +37,7 @@
   border: 1px solid #1c1d1f;
   display: flex;
   flex-grow: 1;
-  margin-left: 0.25rem;
+  margin-left: 1rem;
   margin-right: 2rem;
 }
 
