--- a/frontend/src/pages/Login.css
+++ b/frontend/src/pages/Login.css
@@ -94,3 +94,7 @@
   color: rgb(34, 34, 34);
   padding-left: 5px;
 }
+.form-control:focus {
+  border-color: #a00407;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6);
+}
