--- a/frontend/src/pages/Course/SubtitleView.module.css
+++ b/frontend/src/pages/Course/SubtitleView.module.css
@@ -7,6 +7,10 @@
     background-color:#1c1d1f;
     display: flex;
     justify-content: center;
+    width: 800px;
+    height: 450px;
+    margin:auto;
+    margin-top: 1rem;
 }
 .main-section-left-bottom{
     margin-left: 4rem;
