--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -1,3 +1,6 @@
+.home{
+  min-height: 150vh;
+}
 .navbarSub {
   display: flex;
   align-items: center;
@@ -47,3 +50,13 @@
   color: black;
   box-shadow: inset 0 -1px 0 rgb(0 0 0 / 13%);
 }
+.carousel-control-prev,
+.carousel-control-next {
+  background-color: #363636;
+  width: 5vh;
+  height: 5vh;
+  border-radius: 50%;
+  top:30%;
+  transform: translateY(-50%);
+}
+
