--- a/frontend/src/pages/Course/Course.module.css
+++ b/frontend/src/pages/Course/Course.module.css
@@ -55,8 +55,8 @@
   width: 60%;
   padding: 0;
   margin-top: 0.5rem;
+  box-shadow: rgba(226, 45, 45, 0.16) 0px 1px 4px;
   display: grid;
-  min-height: 40vh;;
   background-color: rgb(255, 255, 255);
 }
 .preview{
@@ -121,9 +121,27 @@
   font-size: 0.9rem;
   color: red;
 }
+.middle{
+  display: grid;
+  grid-template-columns: 70% 20%;
+}
+.middle-right{
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  margin-top: 2rem;
+  max-height: 18rem;
+}
+.middle-right label{
+  margin-top: 1rem;
+  margin-left: 1rem;
+  margin-bottom: 1rem;
+  font-weight: bold;
+}
+.middle-left{
+  margin-left: 5rem;
+}
 .middle-top{
   width: 80%;
-  min-height:5vh;
   margin-top: 2rem;
   margin-left: 5rem;
   align-items: center;
@@ -144,8 +162,7 @@
   font-family: 'Open Sans', sans-serif;
 }
 .middle-bottom{
-  width: 60%;
-  min-height:45vh;
+  width: 80%;
   margin-left: 5rem;
   align-items: center;
   background-position:center ;
@@ -193,8 +210,9 @@
   color: rgb(121, 121, 121);
 }
 .middle-bottom-content-label2{
+  margin-top: 1rem;
   font-size: 1rem;
-  margin-left: 0.25rem;
+  margin-left:2rem;
   color: rgb(121, 121, 121);
 }
 .middle-bottom-content-label1{
