--- a/frontend/src/components/SelectCountry.module.css
+++ b/frontend/src/components/SelectCountry.module.css
@@ -2,4 +2,10 @@
     border: none;
     scroll-behavior: smooth;
     overflow: hidden;
+    width: 40px;
+
+}
+.country-select .country-list{
+    display: none;
+    overflow-x: hidden;
 }
