--- a/frontend/src/components/Navbar.module.css
+++ b/frontend/src/components/Navbar.module.css
@@ -2,14 +2,14 @@
   display: flex;
   align-items: center;
   margin: 0 auto;
-  max-height: 70px;
   width: 100%;
   padding: 10px 2rem;
   border-bottom: 1px solid #f2f2f2;
   box-shadow: rgb(0 0 0 / 20%) 0px 0px 10px;
 }
 .linkContainer{
-  margin-left: auto;
+  display: flex;
+  align-items: center;
 }
 
 .links{
@@ -54,3 +54,11 @@
   color:  rgba(192,4,24,255);  
 }
 
+@media (max-width: 852px) {
+  .navbar {
+    text-align: center;
+    flex-direction: column;
+  }
+
+  
+}
