--- a/frontend/src/pages/Admin/adminComponents/AdminSidebar.module.css
+++ b/frontend/src/pages/Admin/adminComponents/AdminSidebar.module.css
@@ -18,7 +18,7 @@
   color: rgb(0, 0, 0);
 }
 
-hr {
+.hr {
   height: 0;
   border: 0.5px solid rgb(230, 227, 227);
 }
@@ -28,7 +28,7 @@ hr {
   justify-items: center;
   width: 80%;
 }
-ul {
+.ul {
   list-style: none;
   width: 100%;
 }
